Remove Windows-specific org.gradle.java.home from gradle.properties

--- a/mobile-android/AndandoAndo_App/gradle.properties
+++ b/mobile-android/AndandoAndo_App/gradle.properties
@@ -13,11 +13,10 @@ org.gradle.jvmargs=--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED 
   -Xmx2048m -Dkotlin.daemon.jvm.options=-Xmx1024m
 
 # Forzar Gradle a usar JDK 17 (no Java 21!)
-org.gradle.java.home=C\:/Program Files/Eclipse Adoptium/jdk-17.0.12.7-hotspot
 
 # Compatibilidad AndroidX
 android.useAndroidX=true
 android.enableJetifier=true
 
-# Configuración de KSP
+# Configuraciï¿½n de KSP
 ksp.useKSP2=false
